mobile view complete

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     />
     <link rel="stylesheet" href="assets/styles/index.css" />
 
-    <title>Frontend Mentor | Recipe page</title>
+    <title>Recipe page</title>
   </head>
   <body>
     <main class="omelette-recipe">
