Made some changes to the design

--- a/index.html
+++ b/index.html
@@ -34,25 +34,29 @@
           <h2 class="preparation-time-header">Preparation time</h2>
           <ul class="preparation-time-list">
             <li class="preparation-time-list-item">
-              <b>Total:</b> Approximately 10 minutes
+              <p><b>Total:</b> Approximately 10 minutes</p>
             </li>
             <li class="preparation-time-list-item">
-              <b>Preparation:</b> 5 minutes
+              <p><b>Preparation:</b> 5 minutes</p>
             </li>
             <li class="preparation-time-list-item">
-              <b>Cooking:</b> 5 minutes
+              <p><b>Cooking:</b> 5 minutes</p>
             </li>
           </ul>
         </div>
         <div class="ingredients">
           <h2 class="ingredient-header">Ingredients</h2>
           <ul class="ingredient-list">
-            <li class="ingredient-list-items">2-3 large eggs</li>
-            <li class="ingredient-list-items">Salt, to taste</li>
-            <li class="ingredient-list-items">Pepper, to taste</li>
-            <li class="ingredient-list-items">1 tablespoon of butter or oil</li>
+            <li class="ingredient-list-items"><p>2-3 large eggs</p></li>
+            <li class="ingredient-list-items"><p>Salt, to taste</p></li>
+            <li class="ingredient-list-items"><p>Pepper, to taste</p></li>
             <li class="ingredient-list-items">
-              Optional fillings: cheese, diced vegetables, cooked meats, herbs
+              <p>1 tablespoon of butter or oil</p>
+            </li>
+            <li class="ingredient-list-items">
+              <p>
+                Optional fillings: cheese, diced vegetables, cooked meats, herbs
+              </p>
             </li>
           </ul>
         </div>
@@ -61,35 +65,48 @@
           <h2 class="instruction-header">Instructions</h2>
           <ol class="instruction-list">
             <li class="instruction-list-item">
-              <b>Beat the eggs:</b> In a bowl, beat the eggs with a pinch of
-              salt and pepper until they are well mixed. You can add a
-              tablespoon of water or milk for a fluffier texture.
+              <p>
+                <b>Beat the eggs:</b> In a bowl, beat the eggs with a pinch of
+                salt and pepper until they are well mixed. You can add a
+                tablespoon of water or milk for a fluffier texture.
+              </p>
             </li>
             <li class="instruction-list-item">
-              <b>Heat the pan:</b> Place a non-stick frying pan over medium heat
-              and add butter or oil.
+              <p>
+                <b>Heat the pan:</b> Place a non-stick frying pan over medium
+                heat and add butter or oil.
+              </p>
             </li>
             <li class="instruction-list-item">
-              <b>Cook the omelette:</b> Once the butter is melted and bubbling,
-              pour in the eggs. Tilt the pan to ensure the eggs evenly coat the
-              surface.
+              <p>
+                <b>Cook the omelette:</b> Once the butter is melted and
+                bubbling, pour in the eggs. Tilt the pan to ensure the eggs
+                evenly coat the surface.
+              </p>
             </li>
             <li class="instruction-list-item">
-              <b>Add fillings (optional):</b> When the eggs begin to set at the
-              edges but are still slightly runny in the middle, sprinkle your
-              chosen fillings over one half of the omelette.
+              <p>
+                <b>Add fillings (optional):</b> When the eggs begin to set at
+                the edges but are still slightly runny in the middle, sprinkle
+                your chosen fillings over one half of the omelette.
+              </p>
             </li>
             <li class="instruction-list-item">
-              <b>Fold and serve:</b> As the omelette continues to cook,
-              carefully lift one edge and fold it over the fillings. Let it cook
-              for another minute, then slide it onto a plate.
+              <p>
+                <b>Fold and serve:</b> As the omelette continues to cook,
+                carefully lift one edge and fold it over the fillings. Let it
+                cook for another minute, then slide it onto a plate.
+              </p>
             </li>
             <li class="instruction-list-item">
-              <b>Enjoy:</b> Serve hot, with additional salt and pepper if
-              needed.
+              <p>
+                <b>Enjoy:</b> Serve hot, with additional salt and pepper if
+                needed.
+              </p>
             </li>
           </ol>
         </div>
+        <hr />
         <div class="nutrition">
           <h2 class="nutrition-header">Nutrition</h2>
           <p class="nutrition-desc">
@@ -117,11 +134,11 @@
         </div>
       </section>
     </main>
-    <div class="attribution">
+    <footer class="attribution">
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
       >. Coded by <a href="https://github.com/DanielOmehe">Daniel Omehe</a>.
-    </div>
+    </footer>
   </body>
 </html>
